--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,8 @@
 		<div class="center-text">
 			<h2>Get in touch with me using the information below:</h2>
 			<div class="text-triple">
-				<p>Instagram: @Zaakariachaib    Email: chaibzaakaria@gmail.com</p>
+				<p>Instagram: @Zaakariachaib</p>
+				<p>Email: chaibzaakaria@gmail.com</p>
 			</div>
 			<button class="back-btn" onclick="history.back()">Back</button>
 		</div>
